# compliance-os

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Caddyfile  Dockerfile  Makefile  README.md  codex_mcp_config.json  fly.toml  memory.md  pyproject.toml  start.sh
.claude/: mcp.json
compliance_os/: __init__.py  batch_loop.py  batch_validation.py  cascade.py  cli.py  cli_share.py  consent.py  dataroom.py  gmail_client.py  honesty_lint.py  licensing.py  local_engine.py  mcp_hosted.py  mcp_install.py  mcp_server.py  migration.py  presenters.py  settings.py
compliance_os/case_templates/: __init__.py  cpa.py  dependent_status.py  eb1a.py  form_5472.py  founder_h1b.py  h1b.py  matcher.py  schema.py  validator.py
compliance_os/compliance/: __init__.py  cross_check.py  deadlines.py  document_chains.yaml  rules.py  schemas.py
compliance_os/facts/: __init__.py  extraction_map.py  vocabulary.py
compliance_os/indexer/: __init__.py  classifier.py  index.py
compliance_os/professional_search/: __init__.py  aggregator.py  db.py  ingest.py  personas.py  schema.sql  (+1 more)
config/: codex_loop.yaml  compliance_rules.yaml  data_room_batches.yaml  document_types.yaml  model_routing.yaml  products.yaml
docs/: GTM_STRATEGY.md  SESSION_LOG_2026-04-07_to_2026-04-09.md  accounting-vs-important-docs-2026-03-29.md  check-onboarding-funnel.md  classifier_gaps_2026-05-01.md  connector-submission.md  cs-training-guide.md  data-room-batch-01.md  data-room-batch-02.md  data-room-batch-03.md  data-room-batch-04.md  data-room-batch-05.md  data-room-batch-06.md  data-room-batch-07.md  data-room-batch-08.md  data-room-batch-09.md  data-room-batch-10.md  data-room-batch-11.md  data-room-batch-12.md  data-room-batch-13.md  data-room-batch-14.md  data-room-batch-15.md  data-room-batch-16.md  data-room-batch-17.md  data-room-batch-18.md  data-room-batch-19.md  data-room-batch-20.md  data-room-batch-21.md  data-room-batch-22.md  data-room-batch-23.md  data-room-batch-24.md  data-room-batch-25.md  data-room-batch-26.md  data-room-batch-27.md  data-room-batch-28.md  data-room-batch-29.md  data-room-batch-30.md  data-room-batch-31.md  data-room-batch-32.md  data-room-batch-33.md  (+44 more)
frontend/: .env.example  next.config.mjs  package-lock.json  package.json  playwright.config.ts
guardian-cowork/: SKILL.md
guardian-mcp/: README.md
guardian-openclaw/: SKILL.md
prototypes/: guardian-command.html
sample_data/: README.txt  deadlines_sample.txt
screenshots/: README.md
scripts/: backfill_enrichment.py  build_dxt.py  check_quality_loop.py  data_room_batch_loop.py  dogfood_cl4183.py  extraction_bakeoff.py  generate_demo_h1b.py  generate_model_routing.py  generate_submission_assets.py  guardian_mcp_setup.py  ingest_source_to_neon.py  migrate_sqlite_to_postgres.py  probe_webhook.py  recover_stuck_search.py  reextract_missing_ocr.py  report_api_usage.py  report_ingestion_issues.py  rubric_loop.py  run_mcp.sh  run_pipeline_eval.py  seed_attorney.py  seed_dashboard_user_from_sqlite.py  seed_h1b_test_case.py  seed_reviewer_account.py  synthetic_check_test.py  test_case_template_mcp.py  test_h1b_active_search_mcp.py  test_hosted_mcp.py  upload_via_api.py  validate_completed_batches.py  validate_data_room_batch.py
tests/: conftest.py  test_attorney_workflow.py  test_auth.py  test_batch_validation.py  test_cascade.py  test_case_templates.py  test_cases_router.py  test_checklist_service.py  test_checks_router_v2.py  test_classifier.py  test_classifier_new_types.py  test_classifier_service.py  test_codex_loop_scripts.py  test_comparator.py  test_consent.py  test_context_share_endpoint.py  test_cross_check.py  test_dashboard_router.py  test_data_room_batch_loop.py  test_database.py  test_database_v2.py  test_dataroom.py  test_deadlines.py  test_dev_dataset.py  test_discovery_router.py  test_documents_router.py  test_election_83b_service.py  test_extraction_rehome.py  test_extractor.py  test_fbar_service.py  test_followup_service.py  test_form8843_router.py  test_form_8843.py  test_form_fill_router.py  test_form_filler.py  test_gmail_gate_and_packaging.py  test_guardian_ask_local.py  test_guardian_prompt.py  test_h1b_doc_check_service.py  test_honesty_lint.py  (+35 more)
(+784 files in other folders)
