[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compliance-os"
version = "1.0.0"
description = "Guardian — compliance copilot for visas, tax, and foreign-owned entities. MCP server with 23 tools for Claude Code / Desktop / Codex."
readme = "guardian-mcp/README.md"
license = { text = "MIT" }
authors = [
    { name = "Guardian", email = "fretin13@gmail.com" },
]
keywords = [
    "compliance", "immigration", "tax", "h1b", "stem-opt", "cpt", "opt",
    "form-8843", "form-1040-nr", "fbar", "form-5472",
    "mcp", "model-context-protocol", "claude", "codex", "anthropic",
    "nonresident", "international-student",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "llama-index>=0.14",
    "llama-index-embeddings-openai>=0.5",
    "llama-index-llms-openai>=0.6",
    "llama-index-vector-stores-chroma>=0.5",
    "chromadb>=1.5",
    "openai>=2.0",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "rapidfuzz>=3.0",
    "python-dateutil>=2.8",
    "bcrypt>=4.0",
    "pyjwt>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
gmail = [
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]
agent = [
    "mcp[cli]>=1.0",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "google-api-python-client>=2.0",
]

[project.scripts]
cos = "compliance_os.cli:main"
data-room-batch-loop = "compliance_os.batch_loop:main"
guardian-mcp = "compliance_os.mcp_install:main"
guardian-share = "compliance_os.cli_share:main"

[project.urls]
Homepage      = "https://guardiancompliance.app"
Documentation = "https://guardiancompliance.app/docs/install"
Source        = "https://github.com/LEE-CHENYU/compliance-os"
Issues        = "https://github.com/LEE-CHENYU/compliance-os/issues"

[tool.setuptools.packages.find]
include = ["compliance_os*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
